[package]
name = "pixel_rebels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-std = "1.13.1"
log = "0.4.27"
macroquad = "0.4.14"
nalgebra = "0.33.2"
native-dialog = "0.9.0"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
signal-hook = "0.3.18"
thiserror = "2.0.12"
