[package]
name = "pixel_rebels"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
ctrlc = "3.4.7"
futures = "0.3.31"
macroquad = { version = "0.4.14", features = ["backtrace", "log"] }
nalgebra = "0.33.2"
native-dialog = "0.9.0"
once_cell = "1.21.3"
rand = "0.9.1"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
signal-hook = "0.3.18"
thiserror = "2.0.12"
